<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">5Gst</string>
    <string name="startIperf">start</string>
    <string name="stopIperf">stop</string>
    <string name="forceStopIperf">terminate</string>
    <string name="clearLogs">clear</string>
    <string name="deviceIp">Device ip :</string>
    <string name="refreshIp">refresh</string>
    <string name="hideIp">hide</string>
    <string name="iPerf">iPerf</string>
    <string name="pingTesting">TESTING…</string>
    <string name="udpPing">UDP PING</string>
    <string name="bigStop">STOP</string>
    <string name="pingLabel">Ping:</string>
    <string name="noneVal">---</string>
    <string name="ipLabel">ip:</string>>
    <string name="performAsCommand">PERFORM AS COMMAND</string>
    <string name="icmpPing">ICMP PING</string>
    <string name="pingByICMPLabel">ping by ICMP:</string>
    <string name="startUdpPingServer">start udp ping server</string>
    <string name="pingText">PING</string>
    <string name="downloadText">Download iperf args</string>
    <string name="uploadText">Upload iperf args</string>
    <string name="device_ip">Device ip:</string>
    <string name="iperf_mobile">iperf mobile args:</string>
    <string name="iperfServer">iperf server args:</string>
    <string name="server_ip">server ip:</string>
    <string name="thisIsServer">this is server</string>
    <string-array name="commands">
        <item>iPerf</item>
        <item>Ping</item>>
    </string-array>
    <string name="mbps">Mbps</string>
    <string name="ping">ping</string>
    <string name="ms">ms</string>
    <string name="section_name">Section name</string>
    <string name="add_widget">Add widget</string>
    <string name="tap_to_start_session">Tap to start session</string>
    <string name="empty">_____</string>
    <string name="start">start</string>
    <string name="download_speed">Download speed </string>
    <string name="default_main_address">5gst.ru:5555</string>
    <string name="main_address_hint">Main address:</string>
    <string name="balancer_mode">Balancer mode</string>
    <string name="direct_iperf_mode">Direct iPerf mode</string>
    <string name="_0">0</string>
    <string name="upload_speed">Upload speed</string>
    <string name="_ping">Ping</string>
    <string name="dot">.</string>
    <string name="policy_title">Terms and Conditions</string>
    <string name="policy_content">By using this app you agree to our <a href="https://5gst.ru/static/Privacy_Policy_for_5G_Speed_Test_App.html">Privacy Policy</a></string>
    <string name="globalSharedPreferences">globalPreferences</string>
    <string name="google_public_DNS">8.8.8.8</string>
    <string name="ip_address_mock">255.255.255.255</string>
    <string name="iperf_args">iperf args</string>
    <string name="this_device">device:</string>
    <string name="server">server:</string>

    <string name="iperfSharedPreferences">iperfPreferences</string>
    <string name="dev_iperf_args">dev_iperf_args</string>
    <string name="dev_tools_iperf_args_hint">Enter iPerf script</string>
    <string name="download_device_iperf_args">-u -R -P 10 -b 120m</string>
    <string name="upload_device_iperf_args">-u -P 10 -b 120m</string>
    <string name="download_server_iperf_args">-u</string>
    <string name="upload_server_iperf_args">-u </string>
    <string name="immutable_device_args" tools:ignore="TypographyDashes">-f b -i 0.1 --sum-only</string>
    <string name="immutable_server_args">-s</string>

    <string name="user_immutable_down_dev_args">-u -R</string>
    <string name="user_immutable_down_serv_args">-u</string>
    <string name="user_immutable_up_dev_args"> </string>
    <string name="user_immutable_up_serv_args"> </string>
    <string name="dev_tools">Dev tools</string>
    <string name="setup_pipeline">Setup pipeline</string>
    <string name="add_pipeline">Add pipeline</string>
    <string name="pipeline_name">Pipeline name</string>
    <string name="permissions_error">Not enough permissions! We need permissions to access your location and to make and manage phone calls</string>
    <string name="pipeline_shared_storage_name">pipeline_shared_storage</string>
    <string name="stage_field_name">data</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="delay_before_start_iperf">1000</string>
    <string name="delay_between_ping">100</string>
    <string name="waiting_for_results">waiting for results</string>
</resources>