<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <TableLayout
        android:id="@+id/result_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:shrinkColumns="0"
        android:stretchColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:fontFamily="@font/futura_pt_medium"
                android:paddingEnd="20dp"

                android:text="@string/_ping"
                android:textAppearance="@style/Subtitle1"
                android:textColor="?android:attr/textColorPrimary"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/ping_value_res"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/futura_pt_medium"
                android:gravity="end|bottom"
                android:text="@string/_0"
                android:textAppearance="@style/Headline4"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/futura_pt_medium"
                android:gravity="start|bottom"
                android:paddingStart="20dp"

                android:text="@string/ms"
                android:textAppearance="@style/Subtitle1"
                android:textColor="?android:attr/textColorPrimary"
                tools:ignore="RtlSymmetry" />
        </TableRow>

    </TableLayout>
</ScrollView>