<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.scoltech.openran.speedtest.activities.StartActivity">


    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">


        <ru.scoltech.openran.speedtest.customViews.HeaderView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:is_active_back="false"
            app:is_active_button_group="true"
            app:section_name="5G Speedtest" />

        <TextView
            android:id="@+id/action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="200dp"

            android:fontFamily="@font/futura_pt_heavy"
            android:text="@string/tap_to_start_session"
            android:textAppearance="@style/Subtitle2"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp" />

        <!--    Main menu iperf settings    -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/start_screen_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_alignParentBottom="true"
                android:layout_margin="20dp"
                android:orientation="vertical"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/main_address_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/futura_pt_heavy"
                        android:text="@string/main_address_hint"
                        android:textAppearance="@style/Subtitle3"
                        android:textColor="?android:attr/textColorPrimary"

                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@id/main_address"

                        app:layout_constraintHorizontal_weight="2"
                        app:layout_constraintLeft_toLeftOf="parent"

                        app:layout_constraintRight_toLeftOf="@+id/main_address"
                        app:layout_constraintTop_toTopOf="@id/main_address" />
                    <FrameLayout
                        android:id="@+id/main_address__suggest_block"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toRightOf="@+id/main_address_hint"
                        app:layout_constraintBottom_toTopOf="@id/main_address"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent">
                        <androidx.cardview.widget.CardView
                            android:id="@+id/main_address__suggest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:visibility="invisible"
                            android:layout_margin="5dp">
                            <LinearLayout
                                android:id="@+id/main_address__suggest_list"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:maxHeight="100dp"
                                android:orientation="vertical"
                                >
                                <!--
                                <include layout="@layout/suggest_line"/>
                                <include layout="@layout/suggest_line"/>
                                <include layout="@layout/suggest_line"/>
                                -->

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                        <ImageButton
                            android:id="@+id/show_suggest_button"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_gravity="bottom"

                            android:src="@drawable/round_expand_less_24"
                            android:backgroundTint="@color/neutral_10"
                            app:tint="@color/neutral_60"
                            android:contentDescription="@string/show_suggestions"

                            android:onClick="showSuggest"
                            android:visibility="visible"/>
                    </FrameLayout>



                    <EditText
                        android:id="@+id/main_address"
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:autofillHints="@string/default_main_address"

                        android:fontFamily="@font/arial_bold"
                        android:hint="@string/default_main_address"
                        android:inputType="textUri"

                        android:minHeight="48dp"

                        android:text="@string/default_main_address"
                        android:textAppearance="@style/Subtitle2"
                        android:textColor="?android:attr/textColorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_weight="5"
                        app:layout_constraintLeft_toRightOf="@+id/main_address_hint"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/main_address__suggest_block" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <RadioGroup
                    android:id="@+id/mode_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/balancer_mode"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:buttonTint="?android:attr/panelColorForeground"
                        android:checked="true"
                        android:fontFamily="@font/futura_pt_demi"

                        android:minHeight="48dp"
                        android:text="@string/balancer_mode"
                        android:textAppearance="@style/Subtitle3"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/direct_mode"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:buttonTint="?android:attr/panelColorForeground"
                        android:checked="false"
                        android:fontFamily="@font/futura_pt_demi"

                        android:minHeight="48dp"
                        android:text="@string/direct_iperf_mode"
                        android:textAppearance="@style/Subtitle3"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="7dp"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ru.scoltech.openran.speedtest.customButtons.ActionButton
                    android:id="@+id/action_btn"
                    style="?android:attr/buttonBarButtonStyle"

                    android:layout_width="100dp"
                    android:layout_height="100dp"

                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"

                    android:contentDescription="@string/start"

                    android:foreground="@drawable/ic_play"
                    android:foregroundTint="?android:attr/panelColorForeground"

                    android:onClick="onClick" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>